# anagnorisis-game

./: .env.example  .gitignore  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker-compose.yml  progress.md  pyproject.toml  test_setup.py
.claude/: CLAUDE.md
.claude/skills/game-developer/: SKILL.md
client/: __init__.py  main.py  state.py  websocket_client.py
client/android/: .gitignore  settings.gradle
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/screens/: __init__.py  game_screen.py  lobby_screen.py  login_screen.py
client/web/: index.html
data/: .gitkeep
ios/Anagnorisis/Anagnorisis/: AnagnorisisApp.swift  ContentView.swift  Info.plist  Theme.swift
ios/Anagnorisis/Anagnorisis.xcodeproj/: project.pbxproj
ios/Anagnorisis/Anagnorisis/Models/: GameModels.swift  JSONValue.swift
ios/Anagnorisis/Anagnorisis/Services/: GameWebSocketService.swift
ios/Anagnorisis/Anagnorisis/ViewModels/: GameViewModel.swift
ios/Anagnorisis/Anagnorisis/Views/: LobbyView.swift  LoginView.swift
ios/Anagnorisis/Anagnorisis/Views/Game/: CombatActionView.swift  DungeonMapView.swift  GameView.swift  NarrativeLogView.swift  StatsBarView.swift
ios/Anagnorisis/Anagnorisis/Views/Map/: LAMapView.swift
server/: __init__.py  ai_dungeon_master.py  connection_manager.py  dm_prompt.py  dungeon_generator.py  game_engine.py  main.py  poi_classifier.py  story.py
shared/: __init__.py  constants.py  models.py
web/: app.css  index.html
web/js/: app.js  bundle.js  gps.js  la-map.js  map.js  state.js  ws.js
(+5 files in other folders)
